--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/misc.xml
+/.idea/gradle.xml
+/.idea/vcs.xml
+/app/app.iml
 .DS_Store
 /build
 /captures
